--- a/app/src/main/res/layout/fragment_class_group.xml
+++ b/app/src/main/res/layout/fragment_class_group.xml
@@ -105,7 +105,7 @@
                     app:layout_constraintTop_toTopOf="parent" />
 
                 <TextView
-                    android:id="@+id/textView10"
+                    android:id="@+id/student_count"
                     android:layout_width="wrap_content"
                     android:layout_marginEnd="16dp"
                     android:layout_height="wrap_content"
@@ -128,8 +128,11 @@
                     app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
                 <androidx.recyclerview.widget.RecyclerView
+                    android:id="@+id/recyclerView_students"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/divider" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
