--- a/app/src/main/res/layout/fragment_join_class.xml
+++ b/app/src/main/res/layout/fragment_join_class.xml
@@ -19,7 +19,7 @@
            android:cursorVisible="true"
            android:ems="10"
            android:fontFamily="@font/roboto_light"
-           android:hint="Enter Class Id"
+           android:hint="Class Id"
            android:inputType="text"
            android:layout_margin="20dp"
            android:paddingStart="16dp"
