student fragment changed

--- a/app/src/main/res/layout/assignment_item.xml
+++ b/app/src/main/res/layout/assignment_item.xml
@@ -5,6 +5,9 @@
     android:layout_width="match_parent"
     android:layout_marginTop="20dp"
     android:id="@+id/assignmentConstraint"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:elevation="10dp"
     android:background="@drawable/white_roundfilled"
     android:layout_height="wrap_content">
 
