--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -24,6 +24,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
+            android:id="@+id/cons2"
             android:layout_height="match_parent">
 
             <TextView
@@ -53,118 +54,130 @@
         </androidx.constraintlayout.widget.ConstraintLayout>
     </Toolbar>
 
-    <ScrollView
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardView"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar2">
-
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:outlineSpotShadowColor="#818F98"
+        app:layout_constraintTop_toBottomOf="@id/toolbar2"
+        app:layout_constraintLeft_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:cardCornerRadius="18dp"
+        app:cardElevation="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        >
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="30dp">
+            android:layout_height="wrap_content">
 
-
-            <androidx.cardview.widget.CardView
-                android:id="@+id/join_meet_stu2"
+            <LinearLayout
+                android:id="@+id/linearLayout"
                 android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="20dp"
-                android:outlineSpotShadowColor="#818F98"
-                app:cardCornerRadius="14dp"
-                app:cardElevation="0dp"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="10dp"
+                android:weightSum="10"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintLeft_toRightOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent">
 
-                <LinearLayout
-                    android:id="@+id/join_meet_stu"
+                <Button
+                    android:id="@+id/assignment_button"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:background="#DBE3FF"
-                    android:clickable="true"
-                    android:descendantFocusability="blocksDescendants"
-                    android:gravity="center"
-                    android:orientation="horizontal">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="5"
+                    android:background="@drawable/filled_round_btn"
+                    android:backgroundTint="#f2f2f4"
+                    android:drawableLeft="@drawable/assignment"
+                    android:fontFamily="@font/roboto_medium"
+                    android:paddingStart="12dp"
+                    android:text="Assignments"
+                    android:textAllCaps="false"
+                    android:textColor="@color/darkMainColor"
+                    android:textSize="14sp"
+                    />
+                <Button
+                    android:id="@+id/notes_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:layout_weight="5"
+                    android:background="@drawable/filled_round_btn"
+                    android:backgroundTint="#f2f2f4"
+                    android:drawableLeft="@drawable/notes_vector"
+                    android:fontFamily="@font/roboto_medium"
+                    android:paddingStart="12dp"
+                    android:text="Your Notes"
+                    android:textAllCaps="false"
+                    android:textColor="@color/darkMainColor"
+                    android:textSize="14sp"
+                    />
 
 
-                    <ImageView
-                        android:layout_width="24dp"
-                        android:layout_height="24dp"
-                        android:layout_marginEnd="10dp"
-                        android:adjustViewBounds="true"
-                        android:scaleType="fitCenter"
-                        android:src="@drawable/join_meeting_icon"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:tint="@color/mainColor" />
-
-                    <TextView
-                        android:id="@+id/textView5"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/googlesans_medium"
-                        android:gravity="center"
-                        android:text="Join Meeting"
-                        android:textColor="@color/mainColor"
-                        android:textSize="20sp"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toTopOf="parent" />
-
-
-                </LinearLayout>
-
-            </androidx.cardview.widget.CardView>
-
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="40dp"
-                android:fontFamily="@font/googlesans_medium"
-                android:text="Your classes"
-                android:textColor="@color/darkMainColor"
-                android:textSize="24sp"
-                app:layout_constraintStart_toStartOf="@+id/join_meet_stu2"
-                app:layout_constraintTop_toBottomOf="@+id/join_meet_stu2" />
-
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview_stu"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="30dp"
-                android:nestedScrollingEnabled="false"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@+id/join_meet_stu2"
-                app:layout_constraintStart_toStartOf="@+id/join_meet_stu2"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-            <!--     join_meet-->
+            </LinearLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-    </ScrollView>
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/student_float"
-        style="@style/FloatingActionButtonStyle"
+
+    </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|bottom"
-        android:layout_margin="32dp"
-        android:backgroundTint="@color/mainColor"
-        android:src="@drawable/create_meeting_icon"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/roboto"
+        android:text="Your classes"
+        android:textColor="@color/darkMainColor"
+        android:textSize="24sp"
+        app:layout_constraintStart_toStartOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/cardView" />
+
+    <ScrollView
+        android:layout_width="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintBottom_toTopOf="@id/join_meet"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_height="wrap_content">
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
+        android:layout_width="0dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_height="0dp"
+        android:nestedScrollingEnabled="false"
+        app:layout_constraintEnd_toEndOf="@+id/cardView"
+        app:layout_constraintStart_toStartOf="@+id/cardView"
+        app:layout_constraintTop_toBottomOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@id/join_meet"
+        />
+    </ScrollView>
+
+    <Button
+        android:id="@+id/join_meet"
+        style="@style/CustomButton"
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_weight="5"
+        android:background="@drawable/filled_round_btn"
+        android:drawableLeft="@drawable/join_meeting_icon"
+        android:fontFamily="@font/roboto_medium"
+        android:paddingStart="12dp"
+        android:text="Join Meeting"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        android:textSize="14sp" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 </FrameLayout>
