--- a/app/src/main/res/layout/item_notes.xml
+++ b/app/src/main/res/layout/item_notes.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
+        android:elevation="30dp"
         android:layout_margin="10dp"
         >
 
