--- a/app/src/main/res/menu/mini_setting_teacher_menu.xml
+++ b/app/src/main/res/menu/mini_setting_teacher_menu.xml
@@ -2,17 +2,10 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-
-    <item
-        android:id="@+id/switch_to_teacher"
-        android:title="Switch to Teacher" />
-
-    <item
-        android:id="@+id/join_class"
-        android:title="Join a new Class"/>
-
     <item
         android:id="@+id/logout"
         android:title="Logout" />
-
+    <item
+        android:id="@+id/switch_to_teacher"
+        android:title="Switch to Student" />
 </menu>
