--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -61,6 +61,14 @@
         <action
             android:id="@+id/action_teachersFragment_to_teacherAssignmentFragment"
             app:destination="@id/teacherAssignmentFragment" />
+        <action
+            android:id="@+id/action_teachersFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment" />
+        <action
+            android:id="@+id/action_teachersFragment_to_getStartedFragment"
+            app:destination="@id/getStartedFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/homeNotesFragment"
@@ -128,7 +136,14 @@
             app:destination="@id/classGroupFragment" />
         <action
             android:id="@+id/action_studentFragment_to_getStartedFragment"
-            app:destination="@id/getStartedFragment" />
+            app:destination="@id/getStartedFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_studentFragment_to_detailsFragment"
+            app:destination="@id/detailsFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/studentAssignment"
@@ -177,6 +192,8 @@
         tools:layout="@layout/fragment_join_class" >
         <action
             android:id="@+id/action_joinClassFragment_to_studentFragment"
-            app:destination="@id/studentFragment" />
+            app:destination="@id/studentFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
     </fragment>
 </navigation>
