--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".screens.DetailsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -176,102 +177,61 @@
             app:layout_constraintTop_toBottomOf="@+id/student_or_Teacher"
             app:layout_constraintVertical_bias="0.083">
 
-            <TextView
-                android:id="@+id/tvCourse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Course"
 
-                android:textColor="@color/darkMainColor"
-                android:textSize="14sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@id/constraintLayout2" />
-
-
-            <EditText
-                android:id="@+id/etCourse"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/border_input_bg"
-                android:cursorVisible="true"
-                android:ems="10"
-                android:fontFamily="@font/roboto_light"
-                android:hint="B.Tech"
-                android:inputType="textPersonName"
-                android:paddingStart="16dp"
-                android:textColor="@color/darkMainColor"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvCourse" />
-
-            <TextView
-                android:id="@+id/tvSemester"
-                android:layout_width="wrap_content"
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Semester"
-                android:textColor="@color/darkMainColor"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etCourse" />
-
-
-            <EditText
-                android:id="@+id/etSemester"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/border_input_bg"
-                android:cursorVisible="true"
-                android:ems="10"
-                android:fontFamily="@font/roboto_light"
-                android:hint="3"
-                android:inputType="number"
-                android:paddingStart="16dp"
-                android:textColor="@color/darkMainColor"
-                android:textSize="18sp"
+                android:hint="Course"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvSemester" />
+                app:layout_constraintTop_toTopOf="parent">
 
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    android:id="@+id/course_drop"
+                    style="@style/FirebaseUI.TextInputEditText"
+                    android:inputType="none" />
 
-            <TextView
-                android:id="@+id/tvSection"
-                android:layout_width="wrap_content"
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout2"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Section"
-                android:textColor="@color/darkMainColor"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etSemester" />
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/etSection"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/border_input_bg"
-                android:cursorVisible="true"
-                android:ems="10"
-                android:fontFamily="@font/roboto_light"
-                android:hint="A"
-                android:inputType="text"
-                android:paddingStart="16dp"
-                android:textColor="@color/darkMainColor"
-                android:textSize="18sp"
+                android:hint="Section"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvSection" />
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout">
+
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    android:id="@+id/section_drop2"
+                    style="@style/FirebaseUI.TextInputEditText"
+                    android:inputType="none" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/textInputLayout3"
+                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:hint="Semester"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">
+
+                <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                    android:id="@+id/semester_drop"
+                    style="@style/FirebaseUI.TextInputEditText"
+                    android:inputType="none" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
