--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -60,14 +60,13 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:outlineSpotShadowColor="#818F98"
-        app:layout_constraintTop_toBottomOf="@id/toolbar2"
-        app:layout_constraintLeft_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
         app:cardCornerRadius="18dp"
         app:cardElevation="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        >
+        app:layout_constraintTop_toBottomOf="@id/toolbar2">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -98,8 +97,8 @@
                     android:text="Assignments"
                     android:textAllCaps="false"
                     android:textColor="@color/darkMainColor"
-                    android:textSize="14sp"
-                    />
+                    android:textSize="14sp" />
+
                 <Button
                     android:id="@+id/notes_button"
                     android:layout_width="match_parent"
@@ -114,8 +113,7 @@
                     android:text="Your Notes"
                     android:textAllCaps="false"
                     android:textColor="@color/darkMainColor"
-                    android:textSize="14sp"
-                    />
+                    android:textSize="14sp" />
 
 
             </LinearLayout>
@@ -139,25 +137,18 @@
         app:layout_constraintTop_toBottomOf="@+id/cardView" />
 
     <ScrollView
-        android:layout_width="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/textView"
-        app:layout_constraintBottom_toTopOf="@id/join_meet"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_height="wrap_content">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerview"
         android:layout_width="0dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
         android:layout_height="0dp"
-        android:nestedScrollingEnabled="false"
+        android:paddingBottom="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/join_meet"
         app:layout_constraintEnd_toEndOf="@+id/cardView"
         app:layout_constraintStart_toStartOf="@+id/cardView"
-        app:layout_constraintTop_toBottomOf="@+id/textView"
-        app:layout_constraintBottom_toTopOf="@id/join_meet"
-        />
+        app:layout_constraintTop_toBottomOf="@+id/textView">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerview"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
     </ScrollView>
 
     <Button
