updated change role functionality

--- a/app/src/main/res/layout/fragment_create_assignment.xml
+++ b/app/src/main/res/layout/fragment_create_assignment.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     xmlns:app="http://schemas.android.com/apk/res-auto"
 
     tools:context=".screens.CreateAssignmentFragment">
@@ -122,101 +123,60 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tvAssignment" />
 
-            <TextView
-                android:id="@+id/tvCourse"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Course"
-                android:textColor="@color/darkMainColor"
-                android:textSize="14sp"
-                android:layout_marginTop="20dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/etAssignment" />
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tvCourse"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Course"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etAssignment">
 
-            <EditText
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                 android:id="@+id/etCourse"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/border_input_bg"
-                android:cursorVisible="true"
-                android:ems="10"
-                android:fontFamily="@font/roboto_light"
-                android:hint="B.Tech"
-                android:inputType="textPersonName"
-                android:paddingStart="16dp"
-                android:textColor="@color/darkMainColor"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvCourse" />
+                style="@style/FirebaseUI.TextInputEditText"
+                android:inputType="none" />
 
-            <TextView
-                android:id="@+id/tvSemester"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Semester"
-                android:textColor="@color/darkMainColor"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etCourse" />
+        </com.google.android.material.textfield.TextInputLayout>
 
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tvSection"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Section"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvCourse">
 
-            <EditText
-                android:id="@+id/etSemester"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/border_input_bg"
-                android:cursorVisible="true"
-                android:ems="10"
-                android:fontFamily="@font/roboto_light"
-                android:hint="3"
-                android:inputType="number"
-                android:paddingStart="16dp"
-                android:textColor="@color/darkMainColor"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvSemester" />
-
-
-            <TextView
-                android:id="@+id/tvSection"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:fontFamily="@font/poppins_regular"
-                android:text="Section"
-                android:textColor="@color/darkMainColor"
-                android:textSize="14sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etSemester" />
-
-            <com.google.android.material.textfield.TextInputEditText
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                 android:id="@+id/etSection"
-                android:layout_width="0dp"
-                android:layout_height="48dp"
-                android:layout_marginTop="2dp"
-                android:background="@drawable/border_input_bg"
-                android:cursorVisible="true"
-                android:ems="10"
-                android:fontFamily="@font/roboto_light"
-                android:hint="A"
-                android:inputType="text"
-                android:paddingStart="16dp"
-                android:textColor="@color/darkMainColor"
-                android:textSize="18sp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvSection" />
+                style="@style/FirebaseUI.TextInputEditText"
+                android:inputType="none" />
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/tvSemester"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:hint="Semester"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvSection">
+
+            <com.google.android.material.textfield.MaterialAutoCompleteTextView
+                android:id="@+id/etSemester"
+                style="@style/FirebaseUI.TextInputEditText"
+                android:inputType="none" />
+
+        </com.google.android.material.textfield.TextInputLayout>
 
             <TextView
                 android:id="@+id/tvSubject"
@@ -228,7 +188,7 @@
                 android:textColor="@color/darkMainColor"
                 android:textSize="14sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etSection" />
+                app:layout_constraintTop_toBottomOf="@+id/tvSemester" />
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etSubject"
