--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -69,6 +69,11 @@
             app:destination="@id/getStartedFragment"
             app:popUpTo="@id/nav_graph.xml"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_teachersFragment_to_studentFragment"
+            app:destination="@id/studentFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
     </fragment>
     <fragment
         android:id="@+id/homeNotesFragment"
@@ -142,6 +147,11 @@
         <action
             android:id="@+id/action_studentFragment_to_detailsFragment"
             app:destination="@id/detailsFragment"
+            app:popUpTo="@id/nav_graph.xml"
+            app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_studentFragment_to_teachersFragment"
+            app:destination="@id/teachersFragment"
             app:popUpTo="@id/nav_graph.xml"
             app:popUpToInclusive="true" />
     </fragment>
