--- a/app/src/main/res/layout/myclass_item.xml
+++ b/app/src/main/res/layout/myclass_item.xml
@@ -33,25 +33,29 @@
         app:layout_constraintTop_toBottomOf="@+id/course_label" />
 
     <TextView
-        android:id="@+id/students_label"
+        android:id="@+id/stu"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="5dp"
         android:fontFamily="@font/roboto"
-        android:text="click to invite students"
+        app:layout_constraintHorizontal_bias="0"
         android:textColor="@color/darkGreyText"
+        android:maxLines="1"
+        android:paddingEnd="60dp"
+        android:ellipsize="end"
         android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/subject_label" />
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="5dp"
+        android:layout_marginTop="10dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/students_label">
+        app:layout_constraintStart_toStartOf="@+id/stu"
+        app:layout_constraintTop_toBottomOf="@+id/stu">
 
         <ImageView
             android:id="@+id/user1"
@@ -78,14 +82,14 @@
             android:src="@drawable/sample" />
 
         <androidx.cardview.widget.CardView
-            app:cardElevation="0dp"
-            app:cardCornerRadius="50dp"
             android:id="@+id/total_show"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_marginStart="-15dp"
             android:layout_marginEnd="5dp"
             android:layout_weight="1"
+            app:cardCornerRadius="50dp"
+            app:cardElevation="0dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent">
 
